# dulwich-sqlite

./: CHANGELOG.md  README.md  demo.py  main.py  pyproject.toml
docs/: api.md  getting-started.md  git-comparison.md  internals.md  querying.md  schema.md
src/dulwich_sqlite/: __init__.py  _chunking.py  _schema.py  object_store.py  refs.py  repo.py
tests/: conftest.py  test_chunking.py  test_compression.py  test_dedup.py  test_integration.py  test_object_store.py  test_refs.py  test_remote.py  test_repo.py
