[project]
name = "dulwich-sqlite"
version = "0.5.0"
description = "SQLite backend for Dulwich Git implementation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dulwich>=1.0.0",
    "fastcdc>=1.5.0",
    "zstandard>=0.19.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dulwich_sqlite"]

[tool.pytest.ini_options]
testpaths = ["tests"]
